Лабораторная работа доведена до рабочего состояния и сдана.

--- a/eMP_PR1/Properties/launchSettings.json
+++ b/eMP_PR1/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "eMP_PR1": {
       "commandName": "Project",
-      "workingDirectory": "C:\\Users\\Dmitry\\source\\repos\\eMP_PR1\\eMP_PR1"
+      "workingDirectory": "C:\\Users\\User\\source\\repos\\Wolfed7\\eMP_PR1\\eMP_PR1"
     }
   }
 }
